got videos auto playing

--- a/main.html
+++ b/main.html
@@ -13,7 +13,22 @@
 
   <a href="mp3.html"><button>Submit</button></a>
 
-  <div></div>
+  <div class="div1">
+    <video autoplay muted loop id="myVideo">
+      <source src="assets/Animated GIF-original.mp4" type="video/mp4" />
+    </video>
+  </div>
+
+  <div>
+    <video autoplay muted loop id="myVideo">
+      <source src="assets/Animated GIF-original-2.mp4" type="video/mp4" />
+    </video>
+  </div>
+  <div>
+    <video autoplay muted loop id="myVideo">
+      <source src="assets/Animated GIF-original-4.mp4" type="video/mp4" />
+    </video>
+  </div>
 
   <body>
     <script src="js/scripts.js"></script>
