--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Lane Shi</title>
     <meta name="description" content="The HTML5 Herald" />
     <meta name="author" content="SitePoint" />
-
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="assets/styles.css" />
   </head>
   <h1>Lane Web Site</h1>
   <h1>On Load you will be greated</h1>
