got videos auto playing

--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <meta name="description" content="The HTML5 Herald" />
     <meta name="author" content="SitePoint" />
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <h1>Lane Web Site</h1>
   <h1>On Load you will be greated</h1>
-  <a href="main.html"><button>Enter</button></a>
+  <img src="assets/IMG_0389.PNG" alt="" />
+  <h3>"Cool Beans ;)"</h3>
+  <div>
+    <a href="main.html"><button>Enter</button></a>
+  </div>
 
   <body>
     <script src="js/scripts.js"></script>
