--- a/main.html
+++ b/main.html
@@ -10,7 +10,10 @@
 
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
   </head>
-
+  <h1>
+    This will Be the page with the videos on submit you will be taken to page
+    with audio file
+  </h1>
   <a href="mp3.html"><button>Submit</button></a>
 
   <div class="div1">
@@ -19,12 +22,12 @@
     </video>
   </div>
 
-  <div>
+  <div class="div1">
     <video autoplay muted loop id="myVideo">
       <source src="assets/Animated GIF-original-2.mp4" type="video/mp4" />
     </video>
   </div>
-  <div>
+  <div class="div1">
     <video autoplay muted loop id="myVideo">
       <source src="assets/Animated GIF-original-4.mp4" type="video/mp4" />
     </video>
