--- a/mp3.html
+++ b/mp3.html
@@ -7,12 +7,19 @@
     <title>Lane Shi</title>
     <meta name="description" content="The HTML5 Herald" />
     <meta name="author" content="SitePoint" />
-
-    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="assets/styles.css" />
   </head>
-  <h1>Your Mp3 Will be here</h1>
-  <audio src=""></audio>
-
+  <h1>Your Mp3 Will be here based on what you clicked></h1>
+  <h1>*Example*</h1>
+  <div>
+    <audio controls autoplay>
+      <source src="assets/acid youth.wav" type="audio/wav" />
+    </audio>
+  </div>
   <body>
     <script src="js/scripts.js"></script>
   </body>
