animation is init

--- a/main.html
+++ b/main.html
@@ -7,7 +7,10 @@
     <title>Lane Shi</title>
     <meta name="description" content="The HTML5 Herald" />
     <meta name="author" content="SitePoint" />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
   </head>
   <h1>
@@ -22,7 +25,7 @@
     </video>
   </div>
 
-  <div class="div1">
+  <div class="div2">
     <video autoplay muted loop id="myVideo">
       <source src="assets/Animated GIF-original-2.mp4" type="video/mp4" />
     </video>
