animation is init

--- a/mp3.html
+++ b/mp3.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
   </head>
   <h1>Your Mp3 Will be here based on what you clicked></h1>
-  <h1>*Example*</h1>
+  <h1>*This Mp3 is a place holder*</h1>
   <div>
     <audio controls autoplay>
       <source src="assets/acid youth.wav" type="audio/wav" />
