--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <h1>Lane Web Site</h1>
+  <h1>Lane Shi Project</h1>
   <h1>On Load you will be greated</h1>
   <img src="assets/IMG_0389.PNG" alt="" />
   <h3>"Cool Beans ;)"</h3>
