--- a/index.html
+++ b/index.html
@@ -5,23 +5,16 @@
     <meta charset="utf-8" />
 
     <title>Lane Shi</title>
-    <meta name="description" content="The HTML5 Herald" />
-    <meta name="author" content="SitePoint" />
+
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
   </head>
-  <h1>Lane Shi Project</h1>
-  <h1>On Load you will be greated</h1>
-  <img src="assets/IMG_0389.PNG" alt="" />
-  <h3>"Cool Beans ;)"</h3>
-  <div>
-    <a href="main.html"><button>Enter</button></a>
-  </div>
-
   <body>
-    <script src="js/scripts.js"></script>
+    <div class="box">
+      <a href="main.html"><button>Submit</button></a>
+    </div>
   </body>
 </html>
