added meta tag for mobile

--- a/main.html
+++ b/main.html
@@ -3,10 +3,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Lane Shi</title>
-    <meta name="description" content="The HTML5 Herald" />
-    <meta name="author" content="SitePoint" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
