added flower with fade in

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </head>
   <body>
     <div class="box">
-      <a href="main.html"><button>Submit</button></a>
+      <a href="main.html"
+        ><img class="flower" class="fade-in" src="assets/golden_flower.png" />
+      </a>
     </div>
   </body>
 </html>
