--- a/mp3.html
+++ b/mp3.html
@@ -17,7 +17,7 @@
   <h1>*This Mp3 is a place holder*</h1>
   <div>
     <audio controls autoplay>
-      <source src="assets/acid youth.wav" type="audio/wav" />
+      <source src="" type="audio/wav" />
     </audio>
   </div>
   <body>
