--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="box">
       <a href="main.html"
-        ><img class="flower" class="fade-in" src="assets/golden_flower.png" />
+        ><img class="flower" src="assets/golden_flower.png" />
       </a>
     </div>
   </body>
