--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   <body>
     <div class="box">
       <a href="main.html"
-        ><img class="flower" src="assets/golden_flower.png" />
+        ><img draggable="false" class="flower" src="assets/golden_flower.png" />
       </a>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="assets/script.js"></script>
   </body>
 </html>
