added meta tag for mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="box">
       <a href="main.html"
-        ><img draggable="false" class="flower" src="assets/golden_flower.png" />
+        ><img class="flower" src="assets/golden_flower.png" />
       </a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
