started on reactiveness

--- a/main.html
+++ b/main.html
@@ -3,7 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+
     <title>Lane Shi</title>
 
     <link
@@ -25,7 +26,7 @@
 
     
     <div class="animation1">
-      
+    <a href="mp3.html">Click to see the Mp3</a>
         <div class="div1">
           <video autoplay muted loop id="myVideo">
             <source src="assets/Animated GIF-original.mp4" type="video/mp4" />
