--- a/mp3.html
+++ b/mp3.html
@@ -16,9 +16,17 @@
   <h1>Your Mp3 Will be here based on what you clicked></h1>
   <h1>*This Mp3 is a place holder*</h1>
   <div>
-    <audio controls autoplay>
-      <source src="" type="audio/wav" />
-    </audio>
+    <audio
+      id="range"
+      src="assets/Acapella - The Time Is Now.mp3"
+      type="audio/mp3"
+      controls="controls"
+    ></audio>
+    <button>
+      <a href="assets/Acapella - The Time Is Now.mp3" download
+        >Click to Download!</a
+      >
+    </button>
   </div>
   <body>
     <script src="js/scripts.js"></script>
