got videos in line

--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
           </video>
           
           
-          <video class="rightvid" autoplay muted loop id="myVideo">
+          <video autoplay muted loop class="rightvid" id="myVideo">
             <source src="assets/Animated GIF-original-2.mp4" type="video/mp4" />
           </video>
         </div>
