--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
   </head>
   <body>
-    <div>
+    <div class="front">
       <!--
    <a href="main.html"
         ><img
