videos playing on ios

--- a/main.html
+++ b/main.html
@@ -39,17 +39,17 @@
         </div>
 
         <div class="fire" id="divElement">
-          <video autoplay muted loop id="myVideo">
+          <video playsinline autoplay muted loop id="myVideo">
             <source src="assets/Animated GIF-original-2.mp4" type="video/mp4" />
           </video>
         </div>
         <div id="divElement">
-          <video autoplay muted loop id="myVideo">
+          <video playsinline autoplay muted loop id="myVideo">
             <source src="assets/Animated GIF-original-4.mp4" type="video/mp4" />
           </video>
           
           
-          <video autoplay muted loop class="rightvid">
+          <video playsinline autoplay muted loop class="rightvid">
             <source src="assets/Animated GIF-original-2.mp4" type="video/mp4" />
           </video>
         </div>
