--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
     <div class="animation1">
     
         <div class="topdiv">
-          <video autoplay muted loop id="myVideo">
+          <video playsinline autoplay muted loop id="myVideo">
             <source src="assets/Animated GIF-original.mp4" type="video/mp4" />
           </video>
         </div>
