got videos in line on mobile

--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
           </video>
         </div>
         <div id="divElement">
-          <video playsinline autoplay muted loop id="myVideo">
+          <video playsinline autoplay muted loop class="leftvid">
             <source src="assets/Animated GIF-original-4.mp4" type="video/mp4" />
           </video>
           
