got shapes and fixed game

--- a/index.html
+++ b/index.html
@@ -39,5 +39,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="assets/script.js"></script>
   </body>
-  <!--To Lane Shi Otayonii, one of the most beautiful creative souls I have ever had the chance to work with. I Love You and glad we could bring your ideas to the world. -C1t0_ba5h   -->
+  <!--To Lane Shi Otayonii, one of the most beautiful creative souls I have ever had the chance to work with. I Love You and am glad we could bring your ideas to the world. -->
 </html>
