--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="box">
         <div class="flower"> 
           <a href="main.html"
-          ><img class="flowertwo" src="assets/golden_flower.png" />
+          ><img class="flowertwo" src="assets/smallerflower.png" />
         </a>
         </div>
     <!--
