--- a/main.html
+++ b/main.html
@@ -38,9 +38,13 @@
 
       <div class="page2bg">
         <div class ="topdiv">
-          <video class="circle" playsinline autoplay muted loop id="myVideo">
-            <source src="assets/Animated GIF-original-2.mp4" type="video/mp4" />
-          </video>
+          <div class="circledance">
+            <video class="circle" playsinline autoplay muted loop id="myVideo">
+              <source src="assets/Animated GIF-original-2.mp4" type="video/mp4" />
+            </video>
+
+          </div>
+         
           <h3 class="int">intention 意图</h3>
           <div class="square">
             <video playsinline autoplay muted loop class="leftvid">
