--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
     />
 
     <title>Lane Shi</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel=icon href="assets/favicon.ico" />
+    
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
