--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel=icon href="assets/favicon.ico" />
   </head>
   <body>
     <div class="moblieonly" >
