added some animations

--- a/main.html
+++ b/main.html
@@ -31,6 +31,8 @@
 
       -->
     </div>
+<div>
+
 
     <div class="animation1">
       <img class="mobilehead" src="assets/test.png" alt="">
@@ -88,6 +90,7 @@
       </div>
       </div>
     </div>
+  </div>
 <!--
       <div class="topdiv">
         <video class="circle" playsinline autoplay muted loop id="myVideo">
