fixing flower bug

--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 
     <div class="animation1">
       <img class="mobilehead" src="assets/test.png" alt="">
-      <img  class="lastflower"  src="assets/smallerflower.png" alt="">
+      <img  class="lastflower"  src="assets/cropflower.png" alt="">
 
       <div class="page2bg">
         <div class ="topdiv">
