--- a/main.html
+++ b/main.html
@@ -3,11 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
-
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Lane Shi</title>
     <link rel=icon href="assets/favicon.ico" />
     
