--- a/main.html
+++ b/main.html
@@ -3,8 +3,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+
     <title>Lane Shi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel=icon href="assets/favicon.ico" />
     
     <link
