added the reset functionallity

--- a/last.html
+++ b/last.html
@@ -13,19 +13,8 @@
     />
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
   </head>
-  <h1>Your Mp3 Will be here based on what you clicked></h1>
-  <h1>*This Mp3 is a place holder*</h1>
-  <div>
-    <audio
-      id="range"
-      src="assets/Acapella - The Time Is Now.mp3"
-      type="audio/mp3"
-      controls="controls"
-    ></audio>
-    <button>
-     
-    </button>
-  </div>
+  <h1>Nah Nah Nah</h1>
+
   <body>
     <script src="js/scripts.js"></script>
   </body>
