--- a/last.html
+++ b/last.html
@@ -13,9 +13,13 @@
     />
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
   </head>
-  <h1>Nah Nah Nah</h1>
+  <div>
+    <h1 class="nah1">Nah</h1>
+    <h1 class="nah2">n a h ~</h1>
+    <h1 class="nah3">n a h ~</h1>
+  </div>
 
-  <body>
-    <script src="js/scripts.js"></script>
-  </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="assets/script.js"></script>
+  <body></body>
 </html>
