fixed portiat problem

--- a/last.html
+++ b/last.html
@@ -13,11 +13,7 @@
     />
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
   </head>
-  <div>
-    <h1 class="nah1">Nah</h1>
-    <h1 class="nah2">n a h ~</h1>
-    <h1 class="nah3">n a h ~</h1>
-  </div>
+  <div></div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="assets/script.js"></script>
