--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
 
     <div class="animation1">
       <img class="mobilehead" src="assets/test.png" alt="">
-      <img  class="lastflower"  src="assets/cropflower.png" alt="">
+      <img id="toggle" class="lastflower"  src="assets/cropflower.png" alt="">
 
       <div class="page2bg">
         <div class ="topdiv">
