added media querry for small mobile

--- a/last.html
+++ b/last.html
@@ -3,7 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>Lane Shi</title>
     <meta name="description" content="The HTML5 Herald" />
     <meta name="author" content="SitePoint" />
@@ -13,7 +14,7 @@
     />
     <link rel="stylesheet" type="text/css" href="assets/styles.css" />
   </head>
-  <div></div>
+  <div class="lastani"></div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="assets/script.js"></script>
