--- a/last.html
+++ b/last.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Lane Shi</title>
-
+    <link rel="icon" href="assets/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
