--- a/main.html
+++ b/main.html
@@ -74,7 +74,7 @@
 
           </div>
 
-          <button class="rbutton-mobile">Reset <span>重设</span></button>
+          <button class="rbutton-mobile"> <span class="resetmobile">Reset</span><span>重设</span></button>
 
 
 
